--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -210,6 +210,7 @@
     display: grid;
     grid-template-columns: 30px 1fr;
     white-space: normal;
+    overflow: visible;
 
     @media (min-width: $min-width-tablet) {
       grid-template-columns: 40px 1fr;
