--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -271,6 +271,10 @@
 
 .form__input[type="number"] {
   appearance: textfield;
+
+  &::-webkit-inner-spin-button {
+    appearance: none;
+  }
 }
 
 .form__input[type="email"] {
