--- a/source/styles/blocks/sub-card.scss
+++ b/source/styles/blocks/sub-card.scss
@@ -30,6 +30,24 @@
 .sub-card__title-link {
   @include reset-link;
 
+  &:hover {
+    @include transition;
+
+    opacity: 0.6;
+  }
+
+  &:focus {
+    @include transition;
+
+    opacity: 0.6;
+  }
+
+  &:active {
+    @include transition;
+
+    opacity: 0.3;
+  }
+
   @media (min-width: $min-width-tablet) {
     grid-column: 1 / span 2;
   }
